# Tournament

./: README.md  main.py  pyproject.toml
database/: database.py  tournaments.db
timer/: timer.py
ui/: main_form.py  main_form.ui
