[tool.poetry]
name = "tournament"
version = "0.1.0"
description = ""
authors = ["Maxac <maxac153@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = ">=5.15.9,<5.16.0"
pip = ">=22.0.2,<22.1.0"
attrs = ">=22.2.0,<22.3.0"
distro = ">=1.7.0,<1.8.0"
wheel = ">=0.37.1,<0.38.0"
cryptography = ">=3.4.8,<3.5.0"
pillow = ">=9.0.1,<9.1.0"
setuptools = ">=59.6.0,<59.7.0"
packaging = ">=23.0,<24.0"
pyparsing = ">=2.4.7,<2.5.0"
zipp = ">=1.0.0,<1.1.0"
build = ">=0.10.0,<0.11.0"
pytest = ">=7.2.2,<7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
